Remove custom scrollbar, fix styles for minicart

--- a/Magento_Checkout/web/css/source/module/checkout/_order-summary_extend.less
+++ b/Magento_Checkout/web/css/source/module/checkout/_order-summary_extend.less
@@ -35,6 +35,12 @@
 
             .minicart-items {
                 margin: 0;
+
+                .product-item-name {
+                    white-space: normal;
+                    overflow: visible;
+                    height: auto;
+                }
             }
         }
 
